--- a/kubernetes/ciim-ingress/prod_ingress.yml
+++ b/kubernetes/ciim-ingress/prod_ingress.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: etna
   annotations:
     kubernetes.io/ingress.class: kong
-    konghq.com/plugins: request-transform-etna, python-requests-rate-limit
+    konghq.com/plugins: request-transform-etna, rosetta-rate-limit
 spec:
   tls:
     - hosts:
