Re-added ohos kong

--- a/kubernetes/overlays/ohos/kustomization.yaml
+++ b/kubernetes/overlays/ohos/kustomization.yaml
@@ -8,5 +8,6 @@ bases:
   - ../../ohos/public-clean-es
   - ../../ohos/rosetta-3
   - ../../ohos/rosetta-3-graphql
+  - ../../ohos/kong
 commonAnnotations:
   environment: dev
