--- a/kubernetes/ohos/ingress-ciim/ingress.yml
+++ b/kubernetes/ohos/ingress-ciim/ingress.yml
@@ -7,8 +7,13 @@ metadata:
     konghq.com/plugins: request-transform-ohos, global-cors-dev
 spec:
   ingressClassName: tna-ohos
+  tls:
+    - hosts:
+        - tna.rosetta.k-int.com
+      secretName: tls-secret
   rules:
-    - http:
+    - host: tna.rosetta.k-int.com
+      http:
         paths:
           - path: /
             pathType: Prefix
