--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -10,6 +10,7 @@ bases:
   - ../../public-es-2
   - ../../rosetta-3-ciim-staging
   - ../../rosetta-3-ciim-prod
+  - ../../rosetta-3-TEST
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
