--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -385,8 +385,8 @@ rosetta:
           config:
             properties:
               elasticsearch:
-                url: http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com/public
-                auth_token: ZWxhc3RpYzpTdGk1NjVwcWpjOTlJOUNmeTRXODI0SWc=
+                url: http://a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es
+                auth_token: ZWxhc3RpYzpnNG03Tm05d2wwUjEwTk1ibjlEOU9OMjI=
 
   monitoring:
     log_stages: true
