Elastic_modifications -> elastic-modifications file missing.

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -44,6 +44,7 @@ rosetta:
               - generic-search-defaults
               - generic-search-modifications
               - generic-to-elastic
+              - elastic-modifications
               - ciim/search/request
               - inject-highlighting
               - merge-advance-parameters
@@ -67,6 +68,7 @@ rosetta:
             - generic-search-defaults
             - generic-search-modifications
             - generic-to-elastic
+            - elastic-modifications
             - ciim/search/request
             - inject-highlighting
             - inject-exists_digitised-filter
@@ -83,6 +85,7 @@ rosetta:
               - generic-search-defaults
               - generic-search-modifications
               - generic-to-elastic
+              - elastic-modifications
               - ciim/search/request
           response:
             policy: list
@@ -137,7 +140,7 @@ rosetta:
           policy: list
           names:
             - elasticsearchEtna
-
+            
   transform:
     timeout: 5m
     glyphs:
@@ -186,6 +189,12 @@ rosetta:
         properties:
           mutable: true
           spec: ${base_paths.proteus}/merge_advance_parameters.json
+
+      - name: elastic-modifications
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/elastic_modifications.json
 
       - name: generic-to-elastic
         type: elastic-generic-search
