updated test to new ES

--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -269,8 +269,10 @@ rosetta:
               closure: "availability.closure.label.value.keyword"
               catalogueSource: "source.value"
               heldBy: "repository.name.value.keyword"
+              heldById: "repository.@admin.id"
               webReference: "web.identifier.value.lower"
               subject: "subjects.subject.summary.title.keyword"
+              subjectId: "subjects.subject.@admin.id"
               title: "summary.title.keyword"
               longSubject: "subjects.subject.summary.title.keyword"
               longHeldBy: "repository.name.value.keyword"
