updated test to new ES

--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -49,6 +49,7 @@ rosetta:
               - inject-highlighting
               - merge-advance-parameters
               - inject-exists_digitised-filter
+              - inject-subject_nested_agg
           response:
             policy: list
             names:
@@ -72,6 +73,7 @@ rosetta:
             - ciim/search/request
             - inject-highlighting
             - inject-exists_digitised-filter
+            - inject-subject_nested_agg
       - name: ciim/searchTest
         paths:
           - /rosetta/data/searchTest
@@ -194,6 +196,13 @@ rosetta:
         properties:
           mutable: true
           spec: ${base_paths.proteus}/inject_digitised_exists_filter.json
+
+      - name: inject-subject_nested_agg
+        type: proteus
+        input: full
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/inject_subject_nested_agg.json
 
       - name: merge-advance-parameters
         type: proteus
