--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -380,7 +380,7 @@ rosetta:
               elasticsearch:
                 url: http://a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es
                 auth_token: ZWxhc3RpYzpnNG03Tm05d2wwUjEwTk1ibjlEOU9OMjI=
-                captureErrors: true
+                captureErrors: false
 
   monitoring:
     log_stages: true
